--- a/app/globals.css
+++ b/app/globals.css
@@ -26,11 +26,18 @@ h1 {
   font-family: 'Times New Roman', Times, serif;
   font-size: 24px;
   font-weight: bold;
+  letter-spacing: 6px;
 }
 
 h2 {
   font-family: 'Times New Roman', Times, serif;
   font-size: 16px;
+  font-weight: bold;
+}
+
+.initials {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 200px;
   font-weight: bold;
 }
 
@@ -47,6 +54,17 @@ h2 {
   font-family: 'Times New Roman', Times, serif;
   font-size: 12px;
   font-weight: bold;
+  letter-spacing: 6px;
+}
+
+.day {
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.date {
+  font-family: 'Times New Roman', Times, serif;
 }
 
 @layer utilities {
