Add fontFace to css

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,30 @@
   }
 }
 
+@font-face {
+  font-family: 'Times New Roman';
+  src: url(/app/fonts/LiberationSerif-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Times New Roman';
+  src: url(/app/fonts/LiberationSerif-Italic.ttf) format('truetype');
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Times New Roman';
+  src: url(/app/fonts/LiberationSerif-Bold.ttf) format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Times New Roman';
+  src: url(/app/fonts/LiberationSerif-BoldItalic.ttf) format('truetype');
+  font-style: italic;
+  font-weight: bold;
+}
+
 body {
   background-color: #022e68;
   color: rgb(var(--foreground-rgb));
