--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,30 @@
   }
 }
 
+@font-face {
+  font-family: 'Times New Roman';
+  src: url(/app/fonts/LiberationSerif-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Times New Roman';
+  src: url(/app/fonts/LiberationSerif-Italic.ttf) format('truetype');
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Times New Roman';
+  src: url(/app/fonts/LiberationSerif-Bold.ttf) format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Times New Roman';
+  src: url(/app/fonts/LiberationSerif-BoldItalic.ttf) format('truetype');
+  font-style: italic;
+  font-weight: bold;
+}
+
 body {
   background-color: #022e68;
   color: rgb(var(--foreground-rgb));
@@ -33,20 +57,20 @@ footer {
 }
 
 h1 {
-  font-family: "PT Serif", serif;
+  font-family: "PT Serif", 'Times New Roman', serif;
   font-size: 24px;
   font-weight: bold;
   letter-spacing: 6px;
 }
 
 h2 {
-  font-family: "PT Serif", serif;
+  font-family: "PT Serif", 'Times New Roman', serif;
   font-size: 16px;
   font-weight: bold;
 }
 
 .initials {
-  font-family: "PT Serif", serif;
+  font-family: "PT Serif", 'Times New Roman', serif;
   font-size: 200px;
   font-weight: bold;
 }
@@ -61,20 +85,20 @@ h2 {
 }
 
 .text-footer {
-  font-family: "PT Serif", serif;
+  font-family: "PT Serif", 'Times New Roman', serif;
   font-size: 12px;
   font-weight: bold;
   letter-spacing: 6px;
 }
 
 .day {
-  font-family: "PT Serif", serif;
+  font-family: "PT Serif", 'Times New Roman', serif;
   font-style: italic;
   font-weight: bold;
 }
 
 .date {
-  font-family: "PT Serif", serif;
+  font-family: "PT Serif", 'Times New Roman', serif;
 }
 
 @layer utilities {
