changes in layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,15 +22,26 @@ html {
 }
 
 body {
-  background-color: #022e68;
+  background-color: #033e8a;
   color: rgb(var(--foreground-rgb));
   font-family: 'Montserrat', sans-serif;
   height: 100%;
+  background-image: url('../public/noise.svg');
 }
 
-main,
+main {
+  background-image: url('/ES-bg1.jpg');
+   background-size: cover;
+  background-position: center;
+  height: 70vh; /* Full viewport height for the top section */
+  border-bottom-left-radius: 50% 20vw;
+  border-bottom-right-radius: 50% 20vw;
+
+
+}
 footer {
   background-color: #033e8a;
+
 }
 
 .bg-noise {
@@ -54,6 +65,11 @@ h2 {
   font-family: "PT Serif", 'Times New Roman', serif;
   font-size: 200px;
   font-weight: bold;
+}
+
+.ericSugar {
+  margin-top:5px;
+  margin-bottom:5px
 }
 
 .text-normal {
